@startuml
hide circle
skinparam classAttributeIconSize 0

class APIGateway {
}

class BillDetailController {
    - _billDetailRepositories: IBillDetailRepositories 
    + CreateBillDetail([FromBody] CreateBillDetailRequestDTO createBillDetail): Task<IActionResult> 
}

interface IBillDetailRepositories<<interface>>  {
    + CreateBillDetail(CreateBillDetailRequestDTO createBillDetail): Task<BillDetailResponseDTO> 
}

class BillDetailRepositories {
    - _billDetailDAO : BillDetailDAO

    + CreateBillDetail(CreateBillDetailRequestDTO createBillDetail): Task<BillDetailResponseDTO> 

}

class BillDetailDAO {
    - _client.From<BillDetail> : ISupabaseTable<BillDetail>
    + CreateBillDetail(CreateBillDetailRequestDTO createBillDetail): Task<BillDetailResponseDTO> 

}

class BillDetail {
    +Id: Guid
    +MenuItemId: Guid
    +BillId: Guid
    +Quantity: int
    +Price: decimal
    +CreatedAt: DateTime
    +UpdatedAt: DateTime
}

APIGateway -- BillDetailController
BillDetailController -- IBillDetailRepositories
IBillDetailRepositories <|.. BillDetailRepositories
BillDetailRepositories "1" -- "1..*" BillDetailDAO
BillDetailDAO "1" -- "0..*" BillDetail

@enduml
